Set navbar `z-index=1` to avoid hiding it behind page elements

--- a/app/src/shared/nav-bar.module.css
+++ b/app/src/shared/nav-bar.module.css
@@ -6,6 +6,7 @@
 .bar {
     position: sticky;
     top: 0;
+    z-index: 1;
     background-color: var(--mantine-color-brand-6);
     align-items: center;
     display: flex;
